// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shortcut> Snapshots With custom \`className\` 1`] = `
<Anchor
  className="ys-shortcut camel"
  disabled={false}
  href="https://yousee.dk"
  to={null}
>
  <figure
    aria-hidden="true"
    className="ys-shortcut__icon-container"
  >
    <dummyIcon
      className="ys-shortcut__icon ys-icon"
    />
  </figure>
  <span
    className="ys-shortcut__title"
  >
    Musik
  </span>
</Anchor>
`;

exports[`<Shortcut> Snapshots Without custom \`className\` 1`] = `
<Anchor
  className="ys-shortcut"
  disabled={false}
  href="https://yousee.dk"
  to={null}
>
  <figure
    aria-hidden="true"
    className="ys-shortcut__icon-container"
  >
    <dummyIcon
      className="ys-shortcut__icon ys-icon"
    />
  </figure>
  <span
    className="ys-shortcut__title"
  >
    Musik
  </span>
</Anchor>
`;
